--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,10 @@
 		<log4j.version>1.2.17</log4j.version>
 		<sonar.host.url>http://10.0.0.192:9000/</sonar.host.url>
 		<sonar.login>faf0a590c853fb755176d544190b0cd628227f1e</sonar.login>
+		<!--
+	        <sonar.login>admin</sonar.login>
+                <sonar.password>admin</sonar.password>
+                -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
